--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,10 @@ body {
   margin: 0;
   font-family: 'Caudex', serif;
 }
-
+button{
+  font-family: 'Caudex', serif;
+  
+}
 a {
   color: inherit;
   text-decoration: none;
