--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,21 @@
+@font-face {
+  font-family: "Caudex";
+  src: url("/fonts/Caudex-Regular.ttf");
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Caudex";
+  src: url("/fonts/Caudex-Bold.ttf");
+  font-weight: 700;
+}
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Caudex', serif;
+  font-family: 'Caudex';
 }
 button{
-  font-family: 'Caudex', serif;
+  font-family: 'Caudex';
   
 }
 a {
