--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,12 @@
 @font-face {
   font-family: "Caudex";
-  src: url("/fonts/Caudex-Regular.ttf") format('truetype');
+  src: url("/fonts/caudex-regular.woff2") format('truetype');
   font-weight: 400;
   font-display: swap;
 }
 @font-face {
   font-family: "Caudex";
-  src: url("/fonts/Caudex-Bold.ttf") format('truetype');
+  src: url("/fonts/caudex-bold.woff2") format('truetype');
   font-weight: 700;
   font-display: swap;
 }
